# iree-tokenizer-rust

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  Makefile  PROMPT.md  README.md  build.rs  clippy.toml
benches/: bench_comparison.rs
src/: bench_compare.rs  encoding.rs  error.rs  ffi.rs  lib.rs  main.rs  stream.rs  tokenizer.rs
tests/: test_batch.rs  test_decode.rs  test_encode.rs  test_load.rs  test_streaming.rs  test_tiktoken.rs  test_vocab.rs
tests/common/: mod.rs
