[package]
name = "iree-tokenizer"
version = "0.1.0"
edition = "2021"
description = "Rust bindings for the IREE tokenizer C library"
license = "Apache-2.0 WITH LLVM-exception"
default-run = "iree-tokenizer"

[lib]
name = "iree_tokenizer"
path = "src/lib.rs"

[[bin]]
name = "iree-tokenizer"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
bindgen = "0.71"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokenizers = "0.21"

[[bench]]
name = "bench_comparison"
harness = false
